Too much mid-mid-mid
Mid rethinking constructors.
Mid removing most of the reasons for `glb`, since external symbols won't have this information until loading... which may require parsing, which leads to cyclic parsing issues.  Not requiring *anything* from a remove symbol breaks the cycle.
Tests pick up constructor calls.
Lots of minor improvements; printing; tolerance to nulls; comments;